# dagster-example

./: .gitignore  README.md  SUMMARY.md  generate_sample_data.py  open_duckdb_ui.py  pyproject.toml  query_example.py  requirements.txt  setup.bat  setup.py  setup.sh  test_concurrent.py  test_multiprocess.py
.tmp_dagster_home_a0u14c0k/history/: runs.db
.tmp_dagster_home_a0u14c0k/history/runs/: .db  index.db
.tmp_dagster_home_a0u14c0k/schedules/: schedules.db
dagster_example/: __init__.py  jobs.py  resources.py  schedules.py  sensors.py
dagster_example/assets/: __init__.py  advanced_assets.py  aggregation_assets.py  basic_assets.py  transformation_assets.py
data/raw/: customers.csv  products.csv  sales.csv
docs/: ARCHITECTURE.md  CHEATSHEET.md  CONCURRENCY_FIX.md  EXAMPLES.md  INDEX.md  PROJECT_COMPLETE.txt  QUICKSTART.md  QUICK_REFERENCE.txt
tests/: test_assets.py
